fix spacing

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -4,7 +4,8 @@ h1 {
 
 .main-dash-container {
     display: flex;
-    height: calc(100vh - 46px)  ;
+    height: calc(100vh - 46px);
     width: 100vw;
-    background: lightblue
+    background: lightblue;
+    height: 100vh;
 }
